# marky

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.sh  install-cli.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  commands.rs  error.rs  folder.rs  fs.rs  highlights.rs  lib.rs  main.rs  registry.rs  search.rs  settings.rs  vault.rs  watcher.rs
src/components/: CodeCopyOverlay.tsx  CommandPalette.tsx  DocSearch.tsx  FileTree.tsx  FolderSidebar.tsx  HighlightEditPopover.tsx  HighlightPopover.tsx  HighlightsPanel.tsx  Pane.tsx  ResizeHandle.tsx  TabBar.tsx  TableOfContents.tsx  Toolbar.tsx  VaultSidebar.tsx  Viewer.tsx
src/components/ui/: badge.tsx  button.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx
src/lib/: copyAsMarkdown.ts  docSearch.test.ts  docSearch.ts  highlight.ts  highlights.test.ts  highlights.ts  highlightsApply.ts  highlightsStore.tsx  markdown.test.ts  markdown.ts  mermaid.ts  notifications.tsx  preferences.tsx  tauri.ts  theme.test.tsx  theme.tsx  utils.test.ts  workspace.test.ts  workspace.ts
src/styles/: index.css  markdown.css
src/types/: shims.d.ts
